--- a/login.html
+++ b/login.html
@@ -8,7 +8,35 @@
     <title>Login</title>
 </head>
 <body>
- <h1>This is login page!!! :( </h1>
+  <div class="row"> 
+    <div class="col-md-6">
+      <form>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Enter your email to continue</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="eg.something@gmail.com">
+          <button type="submit" class="btn btn-primary btn-block">Next</button>
+        </div> 
+        <h6 align="center">OR</h6>
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary btn-block">Sign in with Google</button>   
+        </div> 
+        <br>
+        <h6><b>Dont miss out on App-only features of Yocket</b></h6> 
+        <div class="row">  
+        <div class="col-md-6">
+          <button type="submit" class="btn btn-primary btn-block">Google Play</button>
+        </div>
+        <div class="col-md-6">
+          <button type="submit" class="btn btn-primary btn-block">App Store</button>
+        </div> 
+        </div>
+      </form>
+     </div> 
+     <div class="col-md-6">
+       <h4>Yocket</h4>     
+     </div>
+  </div> 
+
 <script src="/js/jquery-3.3.1.slim.min.js"></script>
 <script src="/js/popper.min.js"></script>
 <script src="/js/bootstrap.js"></script>
