--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 <body >
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">STUDY ABROAD</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="  false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="  false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
-
+      </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
@@ -25,12 +24,11 @@
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">University Deadlines</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#"><i class="material-icons">school</i>Grad School Finder</a>
+            <a class="dropdown-item" href="#"><i class="material-icons" style="padding: 0px 10px 0px 0px">school</i>Grad School Finder</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Compare Universities</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Course Descriptions</a>
-            
           </div>
       </li>
       <li class="nav-item dropdown">
