gave spacing in between the cards,made the nav sticky, added a dummy footer and added the background image.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <script src="D:\practice\Js\bootstrap.min.js" ></script>
 </head>
 <body >
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">STUDY ABROAD</a>
+<nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color:#FF9800;border-color:#FF9800">
+    <a class="navbar-brand" style="font-family: Marck script" href="#">STUDY ABROAD</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="  false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
       </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             UNIVERSITIES
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -32,7 +32,7 @@
           </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           PROFILES
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -46,10 +46,10 @@
         </div>
       </li>
        <li class="nav-item">
-        <a class="nav-link" href="#">DISCUSSIONS</a>
+        <a class="nav-link text-white" href="#">DISCUSSIONS</a>
       </li>
       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           SERVICES
           </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -65,15 +65,355 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">EVENTS</a>
+        <a class="nav-link text-white" href="#">EVENTS</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">BLOG</a>
+        <a class="nav-link text-white" href="#">BLOG</a>
       </li>
   </ul>
     <button class="btn btn-sm btn-outline-secondary" type="button">Login</button>
-    <button class="btn btn-sm btn-outline-secondary" type="button">Sign up</button>
+    <button class="btn btn-sm btn-outline-secondary bg-white border-white" type="button">Sign up</button>
   </div>
 </nav>
+<div class="container-fluid">
+	<!--for the image, search and brand-->
+	<div class="card bg-dark text-white">
+		<!--img class="card-img" style="height: 400px" src="https://images.unsplash.com/photo-1485292328290-48ee9323b881?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6dc147b6aa0ac3eb29a1760fabd3f58c&auto=format&fit=crop&w=1950&q=80"-->
+  		<img class="card-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/121_-_Kingston_-_Septembre_2009.jpg/1280px-121_-_Kingston_-_Septembre_2009.jpg" alt="Card image">
+  		<div class="card-img-overlay">
+    		<div>
+    			<select class="form-control">
+  					<option>Default select</option>
+				</select>
+    		</div>	
+  		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="row m-3">
+		<div class="col-8">
+			TRENDING UNIVERSITIES
+		</div>
+		<div class="col-4 border border-primary">
+			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">MORE UNIVERSITY REVIEWS</button>
+		</div>
+	</div>		
+	<div class="row m-3">
+		<div class="col-2">
+			<div class="card">
+  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+  				<div class="card-body">
+    				<p class="card-text">SYRACUSE</p>
+  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+  				<div class="card-body">
+    				<p class="card-text">VRIJE</p>
+  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">FORDHAM</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">CSU OHIO</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">CAL POLY CPP</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+		 <div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">USM GULF</p>
+	  				</div>
+			</div>
+		</div>	
+	</div>
+	<div class="row m-3">
+		<div class="col-8">
+			TRENDING YOCKETERS THIS WEEK
+		</div>
+		<div class="col-4">
+			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">SEE ALL DISCUSSIONS</button>
+		</div>
+	</div>
+	<div class="row m-3">
+		<div class="col-2">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">SHASHI</h5>
+			    <p class="card-text">39 comments</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">Sinduja</h5>
+			    <p class="card-text">39 comments</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">Swati</h5>
+			    <p class="card-text">39 comments</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">Dileep</h5>
+			    <p class="card-text">39 comments</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">Tushar</h5>
+			    <p class="card-text">39 comments</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">devesh</h5>
+			    <p class="card-text">39 comments</p>
+			  </div>
+			</div>
+		</div>	
+	</div>	
+	<div class="row m-3">
+		<div class="col-8">
+			RECENT ADMITS
+		</div>
+		<div class="col-4">
+			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">SEE MORE ADMITS/REJECTS</button>
+		</div>
+	</div>
+	<div class="row m-3">
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">SHIVAM</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">SABIR</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">SHRADHA</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">PRIYANKA</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">DEVANSHI</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">RAVURI</p>
+	  				</div>
+			</div>
+		</div>	
+	</div>	
+	<div class="row m-3">
+		<div class="col-8">
+			TRENDING ARTICLES
+		</div>
+		<div class="col-4">
+			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">READ MORE ARTICLES</button>
+		</div>
+	</div>
+	<div class="row m-3">
+		<div class="col-2">
+			<div class="card">
+		  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+		  				<div class="card-body">
+		    				<p class="card-text">HOW</p>
+		  				</div>
+				</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">FALL 2018</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">NEXT?</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">FALL 2017</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">IMPORTANT</p>
+	  				</div>
+			</div>
+		</div>
+		<div class="col-2">
+			<div class="card">
+	  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
+	  				<div class="card-body">
+	    				<p class="card-text">MS OUTSIDE</p>
+	  				</div>
+			</div>
+		</div>	
+	</div>
+	<div class="row">
+		<div class="col-8 m-3">
+			POPULAR FEATURES
+		</div>
+	</div>		
+	<div class="row m-3">
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">GRAD SCHOOL FINDER</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Try our smart software and see a list of safe, realistic & ambitious universities, based on YOUR profile</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">COMPARE UNIVERSITIES</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">A comprehensive rating of universities on noteworthy parameters to help you easily narrow down on universities</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">UNIVERSITY DEADLINE</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Make sure you apply to your interested universities before the deadlines. Keep track of university deadlines</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">EVENTS</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Yocket helps you keep track of events, webinars, seminars related to studying masters abroad</p>
+			  </div>
+			</div>
+		</div>	
+	</div>
+	<div class="row">
+		<div class="col-8 m-3">
+			YOCKET SERVICES
+		</div>
+	<div class="row border border-primary m-3" >
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">SEND TRANSCRIPTS</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Send your transcripts and documents to Universities in US and Canada from Yocket via FedEx or DHL at discounted rates.</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">EDUCATION LOANS</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Yocket helps you keep track of events, webinars, seminars related to studying masters abroad</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">BUY FOREX</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Get a Forex card for your expenses or pay your university fee at competitive Forex rates right here on Yocket.</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-3">
+			<div class="card">
+			  <div class="card-body">
+			    <h5 class="card-title">HEALTH/TRAVEL INSURANCE</h5>
+			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+			    <p class="card-text">Save on your health and travel insurance - buy your requirements on Yocket.</p>
+			  </div>
+			</div>
+		</div>
+	</div>
+</div>	
+<div class="container-fluid bg-dark">
+	<div class="row">
+		<div class="col ">
+			sdfjsdh
+		</div>
+	</div>
+</div>	
 </body>
 </html>
