--- a/myprofile.html
+++ b/myprofile.html
@@ -79,40 +79,18 @@
     <br>
     <div class="container-fluid">
       <div class="row"> 
-        <div class="col-6">
-          <form> 
-            <div class="text-center">Enter your email to continue</div>
-            <div class="form-group">  
-              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="eg.something@gmail.com">
-            </div>
-            <div class="form-group">  
-              <button type="submit" class="btn btn-primary btn-block">Next</button>
-            </div>    
-            <h6 align="center">OR</h6>
-            <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block"><i class="fab fa-google"></i> Sign in with Google</button>   
-            </div> 
-            <h6 class="text-center"><b>Dont miss out on App-only features of Yocket</b></h6> 
-            <div class="row">  
-            <div class="col-6">
-             <img src="img/google-play-badge.png"class="img-fluid">
-            </div>
-            <div class="col-6">
-              <button type="submit" class="btn btn-primary btn-block">App Store</button>
-            </div> 
-            </div>
-          </form>
-         </div> 
-         <div class="col-6">
-           <ul class="list-group list-group-flush">
-             <li class="list-group-item"><h1 class="mb-1">Yocket</h1><small>Study Abroad Guide For Masters</small></li>
-             <li class="list-group-item"><h6 class="mb-1">195,000 masters students & aspirants</h6><small>Join the largest study-abroad community for masters</small></li>
-             <li class="list-group-item"><h6 class="mb-1">176,000 admits and rejects</h6><small>Discover university-wise admits and rejects or connect with people having similar profiles</small></li>
-             <li class="list-group-item"><h6 class="mb-1">65,000 discussions and 253,000 answers</h6><small>Post your doubts, get answers and share experiences with this vast community.</small></li>
-             <li class="list-group-item"><h6 class="mb-1">Profile evaluator</h6><small>A smart tool to suggest list of safe, realistic & ambitious universities, based on YOUR profile</small></li>
-           </ul>     
-         </div>
-      </div>  
+        <div class="col"> 
+      <div class="card bg-dark text-white">
+  <img class="card-img" src="img/MissouriUniversityofScienceandTechnology.jpg" height="350"alt="Card image">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Pooja Zare</h5>
+    <p class="card-text">@pooja08</p>  
+    <p class="card-text">Missouri University Of Science And Technology Student</p>
+    <p class="card-text">Computer Science(Fall 2017)</p>
+  </div>
+          </div> 
+   </div>
+</div>    
     </div>
     <footer>Footer</footer>
 <script src="/js/jquery-3.3.1.slim.min.js"></script>
