--- a/myprofile.html
+++ b/myprofile.html
@@ -90,7 +90,115 @@
   </div>
           </div> 
    </div>
+</div>  
+<div class="row">
+    <div class="col">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item"><p class="text-uppercase font-weight-bold ">Profile & Academics <button type="button" class="btn btn-light float-right">Edit</button></p></li>
+             <li class="list-group-item"><h6 class="mb-1">Undergrad:</h6><small>Computer Science from Medicaps University</small>
+              
+        <div class="d-flex bd-highlight">
+  <div class="p-2 flex-fill bd-highlight ">
+      <ul align="center" class="list-unstyled ">
+          <li><i class="fas fa-globe"></i> </li>
+          <li >GRE</li>
+          <li>310</li>
+          <li><small>Quant : 162</small></li>
+          <li><small>Verbal: 148</small></li>
+      </ul>
+</div>
+  <div class="p-2 flex-fill bd-highlight">
+      <ul align="center" class="list-unstyled ">
+          <li><i class="fas fa-book"></i></li>
+          <li>TOEFL</li>
+          <li>98</li>
+      </ul> </div>
+  <div class="p-2 flex-fill bd-highlight">
+      <ul align="center" class="list-unstyled ">
+          <li><i class="fas fa-graduation-cap"></i></li>
+          <li>UG Score</li>
+          <li>7.97CGPA</li>
+      </ul>  
+</div>
+</div>
+                 <div class="d-flex bd-highlight">
+  <div class="p-2 flex-fill bd-highlight">
+      <ul align="center" class="list-unstyled ">
+          <li><i class="fas fa-briefcase"></i></li>
+          <li>Work Exp.</li>
+          <li>34 months</li>
+      </ul> </div>
+  <div class="p-2 flex-fill bd-highlight">
+     <ul align="center" class="list-unstyled ">
+          <li><i class="fas fa-newspaper"></i></li>
+          <li>Tech Papers</li>
+          <li>None</li>
+      </ul></div>
+  <div class="p-2 flex-fill bd-highlight">
+      <ul align="center" class="list-unstyled ">
+          <li><i class="fas fa-university"></i></li>
+          <li>Final Univ.</li>
+          <li>Missouri S & T</li>
+      </ul></div>
+</div>
+                 </li>
+            </ul>
+    </div> 
+    <div class="col">
+        <ul class="list-group list-group-flush">
+             <li class="list-group-item"><p class="text-uppercase font-weight-bold ">Universities Applied <button type="button" class="btn btn-light float-right">Add/Edit</button></p></li>
+             <li class="list-group-item">
+                 <div class="row">
+                 <div class="col-10"><h6 class="mb-1">Missouri University Of Science And Technology</h6></div>
+                     <div class="col-2"><button type="button" class="btn btn-success" disabled>Admit</button></div>
+                 </div>
+                <small>Computer Science</small>
+                <div class="row">
+                     <div class="col"><small>Applied: 17 Jun 2017</small></div>
+                     <div class="col"><small>Decision: 18 Jul 2017</small></div>
+                 </div>
+            </li>
+             <li class="list-group-item">
+                 <div class="row">
+                 <div class="col-10"><h6 class="mb-1">Indiana Univ - Purdue Univ Indianapolis</h6></div>
+                     <div class="col-2"><button type="button" class="btn btn-success" disabled>Admit</button></div>
+                 </div>
+                <small>Computer & Information Science</small>
+                <div class="row">
+                     <div class="col"><small>Applied: 18 Mar 2017</small></div>
+                     <div class="col"><small>Decision: 01 May 2017</small></div>
+                 </div>
+            </li>
+            <li class="list-group-item">
+                 <div class="row">
+                 <div class="col-10"><h6 class="mb-1">University Of North Carolina at Charlotte</h6></div>
+                     <div class="col-2"><button type="button" class="btn btn-danger" disabled>Reject</button></div>
+                 </div>
+                <small>Computer Science</small>
+                <div class="row">
+                     <div class="col"><small>Applied: 27 Feb 2017</small></div>
+                     <div class="col"><small>Decision: 11 Apr 2017</small></div>
+                 </div>
+            </li>
+           </ul> 
+        <div class="ml-3">
+        <small>Add your applications' status to connect with students having similar admits/rejects.</small><br>
+        <button type="button" class="btn btn-primary btn-sm">Add Applications</button>
+            </div>
+    </div>
+    <div class="col-3">
+        
+        <button type="button" class="btn btn-outline-secondary mt-2"><i class="fas fa-question-circle"></i> pooja08's questions</button>
+        <button type="button" class="btn btn-outline-secondary mt-3"><i class="fas fa-comments"></i> pooja08's comments</button>
+    <div class="card border-primary mt-5" style="max-width: 18rem;">
+  <div class="card-header">TRENDING YOCKETERS THIS WEEK</div>
+  <div class="card-body text-primary">
+    <h5 class="card-title">Primary card title</h5>
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+  </div>
 </div>    
+    </div>
+        </div>        
     </div>
     <footer>Footer</footer>
 <script src="/js/jquery-3.3.1.slim.min.js"></script>
