--- a/index.html
+++ b/index.html
@@ -75,27 +75,45 @@
     <button class="btn btn-sm btn-outline-secondary bg-white border-white" type="button">Sign up</button>
   </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid pr-0 pl-0">
 	<!--for the image, search and brand-->
 	<div class="card bg-dark text-white">
 		<!--img class="card-img" style="height: 400px" src="https://images.unsplash.com/photo-1485292328290-48ee9323b881?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=6dc147b6aa0ac3eb29a1760fabd3f58c&auto=format&fit=crop&w=1950&q=80"-->
   		<img class="card-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9f/121_-_Kingston_-_Septembre_2009.jpg/1280px-121_-_Kingston_-_Septembre_2009.jpg" alt="Card image">
-  		<div class="card-img-overlay">
-    		<div>
-    			<select class="form-control">
-  					<option>Default select</option>
-				</select>
+  		<div class="card-img-overlay" >
+  			<div class="row justify-content-center mt-5">
+  				<div>
+  				<H3>STUDY ABROAD</h3>
+  				<p>Study Abroad Guide For Masters</p>
+  				</div>
+  			</div>
+    		<div class="row justify-content-center">
+    			<div class="col-3 align-self-end">
+    				<h3><strong>What do you plan to study?</strong></h3>
+    				<select class="form-control">
+					  <option>AEROSPACE/AERONAUTICAL</option>
+					</select>
+    			</div>
+    			<div class="col-3 align-self-end">
+    				<h3><strong>And from where?</strong></h3>
+    				<select class="form-control">
+					  <option>United States</option>
+					</select>
+    			</div>
+    			<div class="col-2 align-self-end">
+    				<button type="button" class="btn btn-warning ">SEARCH UNIVERSITIES</button>
+    			</div>
     		</div>	
   		</div>
 	</div>
 </div>
 <div class="container">
-	<div class="row m-3">
-		<div class="col-8">
+	<div class="row m-3 justify-content-between">
+		<div class="col-6">
 			TRENDING UNIVERSITIES
 		</div>
-		<div class="col-4 border border-primary">
-			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">MORE UNIVERSITY REVIEWS</button>
+		<div class="col-3">
+			<button type="button" class="btn btn-primary btn-sm float-right" style="background-color:#FF9800;border-color:#FF9800">MORE UNIVERSITY REVIEWS</button>
 		</div>
 	</div>		
 	<div class="row m-3">
@@ -148,19 +166,19 @@
 			</div>
 		</div>	
 	</div>
-	<div class="row m-3">
+	<div class="row m-3 justify-content-between">
 		<div class="col-8">
 			TRENDING YOCKETERS THIS WEEK
 		</div>
 		<div class="col-4">
-			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">SEE ALL DISCUSSIONS</button>
+			<button type="button" class="btn btn-primary btn-sm float-right" style="background-color:#FF9800;border-color:#FF9800">SEE ALL DISCUSSIONS</button>
 		</div>
 	</div>
 	<div class="row m-3">
 		<div class="col-2">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">SHASHI</h5>
+			    <strong class="card-title">SHASHI</strong>
 			    <p class="card-text">39 comments</p>
 			  </div>
 			</div>
@@ -168,7 +186,7 @@
 		<div class="col-2">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">Sinduja</h5>
+			    <strong class="card-title">Sinduja</strong>
 			    <p class="card-text">39 comments</p>
 			  </div>
 			</div>
@@ -176,7 +194,7 @@
 		<div class="col-2">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">Swati</h5>
+			    <strong class="card-title">Swati</strong>
 			    <p class="card-text">39 comments</p>
 			  </div>
 			</div>
@@ -184,7 +202,7 @@
 		<div class="col-2">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">Dileep</h5>
+			    <strong class="card-title">Dileep</strong>
 			    <p class="card-text">39 comments</p>
 			  </div>
 			</div>
@@ -192,7 +210,7 @@
 		<div class="col-2">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">Tushar</h5>
+			    <strong class="card-title">Tushar</strong>
 			    <p class="card-text">39 comments</p>
 			  </div>
 			</div>
@@ -200,7 +218,7 @@
 		<div class="col-2">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">devesh</h5>
+			    <strong class="card-title">devesh</strong>
 			    <p class="card-text">39 comments</p>
 			  </div>
 			</div>
@@ -211,7 +229,7 @@
 			RECENT ADMITS
 		</div>
 		<div class="col-4">
-			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">SEE MORE ADMITS/REJECTS</button>
+			<button type="button" class="btn btn-primary btn-sm float-right" style="background-color:#FF9800;border-color:#FF9800">SEE MORE ADMITS/REJECTS</button>
 		</div>
 	</div>
 	<div class="row m-3">
@@ -269,10 +287,10 @@
 			TRENDING ARTICLES
 		</div>
 		<div class="col-4">
-			<button type="button" class="btn btn-primary btn-sm" style="background-color:#FF9800;border-color:#FF9800">READ MORE ARTICLES</button>
+			<button type="button" class="btn btn-primary btn-sm float-right" style="background-color:#FF9800;border-color:#FF9800">READ MORE ARTICLES</button>
 		</div>
 	</div>
-	<div class="row m-3">
+	<div class="row m-3 ">
 		<div class="col-2">
 			<div class="card">
 		  				<img class="card-img-top" src="https://www.w3schools.com/howto/img_fjords.jpg" alt="Card image cap">
@@ -322,98 +340,181 @@
 			</div>
 		</div>	
 	</div>
-	<div class="row">
-		<div class="col-8 m-3">
+	<div class="row m-3 ">
+		<div class="col-8 ">
 			POPULAR FEATURES
 		</div>
 	</div>		
 	<div class="row m-3">
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">GRAD SCHOOL FINDER</h5>
+			    <strong class="card-title">GRAD SCHOOL FINDER</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Try our smart software and see a list of safe, realistic & ambitious universities, based on YOUR profile</p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">COMPARE UNIVERSITIES</h5>
+			    <strong class="card-title">COMPARE UNIVERSITIES</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">A comprehensive rating of universities on noteworthy parameters to help you easily narrow down on universities</p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">UNIVERSITY DEADLINE</h5>
+			    <strong class="card-title">UNIVERSITY DEADLINE</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Make sure you apply to your interested universities before the deadlines. Keep track of university deadlines</p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">EVENTS</h5>
+			    <strong class="card-title">EVENTS</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Yocket helps you keep track of events, webinars, seminars related to studying masters abroad</p>
 			  </div>
 			</div>
 		</div>	
 	</div>
-	<div class="row">
-		<div class="col-8 m-3">
+	<div class="row  m-3">
+		<div class="col-8">
 			YOCKET SERVICES
 		</div>
-	<div class="row border border-primary m-3" >
+	</div>	
+	<div class="row m-3" >
 		<div class="col-3">
 			<div class="card">
 			  <div class="card-body">
-			    <h5 class="card-title">SEND TRANSCRIPTS</h5>
+			    <strong class="card-title">SEND TRANSCRIPTS</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Send your transcripts and documents to Universities in US and Canada from Yocket via FedEx or DHL at discounted rates.</p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">EDUCATION LOANS</h5>
+			    <strong class="card-title">EDUCATION LOANS</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Yocket helps you keep track of events, webinars, seminars related to studying masters abroad</p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">BUY FOREX</h5>
+			    <strong class="card-title">BUY FOREX</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Get a Forex card for your expenses or pay your university fee at competitive Forex rates right here on Yocket.</p>
 			  </div>
 			</div>
 		</div>
 		<div class="col-3">
-			<div class="card">
+			<div class="card h-100">
 			  <div class="card-body">
-			    <h5 class="card-title">HEALTH/TRAVEL INSURANCE</h5>
+			    <strong class="card-title h-100">HEALTH/TRAVEL INSURANCE</strong>
 			    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
 			    <p class="card-text">Save on your health and travel insurance - buy your requirements on Yocket.</p>
 			  </div>
 			</div>
 		</div>
+	</div>	
+</div>
+</div>
+<div class="container-fluid bg-secondary">
+	<div class="row bg-secondary">
+		
 	</div>
-</div>	
-<div class="container-fluid bg-dark">
-	<div class="row">
-		<div class="col ">
-			sdfjsdh
+	<div class="row m-3 justify-content-center">
+		<div class="col">
+			<div class="float-right">
+				Looking for help?
+			</div>	
+		</div>
+		<div class="col pl-0">
+			<button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
+		</div>	
+	</div>
+	<div class="container">
+		<div class="row m-3">
+			<div class="col-3">
+				<div class="card h-100 bg-secondary border-secondary">
+				  <div class="card-body text-center">
+				    <strong>UNIVERSITY INFORMATION</strong>
+				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+				    <ul class="card-text list-unstyled">
+				    	<li>University Reviews</li>
+						<li>Profile evaluator</li>
+						<li>Compare universities</li>
+						<li>Application Deadlines</li>
+						<li>Course Descriptions</li>
+					</ul>
+				  </div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card h-100 bg-secondary border-secondary">
+				  <div class="card-body text-center">
+				    <strong>EXPLORE YOCKET</strong>
+				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+				    <ul class="card-text list-unstyled">
+				    	<li>Similar profiles</li>
+						<li>Admits & rejects</li>
+						<li>Roommate finder</li>
+						<li>Discussions</li>
+						<li>Read Articles</li>
+					</ul>
+				  </div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card h-100 bg-secondary border-secondary">
+				  <div class="card-body text-center">
+				    <strong>SERVICES</strong>
+				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+				    <ul class="card-text list-unstyled">
+				    	<li>Send transcripts</li>
+						<li>Education Loans</li>
+						<li>Forex Card</li>
+						<li>University fee payment</li>
+						<li>Health/Travel Insurance</li>
+					</ul>
+				  </div>
+				</div>
+			</div>
+			<div class="col-3">
+				<div class="card h-100 bg-secondary border-secondary">
+				  <div class="card-body text-center">
+				    <strong>MORE</strong>
+				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+				    <ul class="card-text list-unstyled">
+				    	<li>Contact us | Work with us</li>
+						<li>Facebook | Twitter</li>
+						<li>About Us</li>
+						<li>Campus Ambassador</li>
+						<li>Privacy | Terms</li>
+					</ul>
+				  </div>
+				</div>
+			</div>
 		</div>
 	</div>
+	<div class="row justify-content-center">
+		<div class="col-auto">
+			<select class="form-control form-control-sm">
+			  <option>Select language</option>
+			</select>
+			<p>Powered by google <strong>Translate</strong></p>
+
+		</div>	
+	</div>	
 </div>	
 </body>
 </html>
