ui chnages in my profile

--- a/myprofile.html
+++ b/myprofile.html
@@ -94,7 +94,7 @@
 <div class="row">
     <div class="col">
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><p class="text-uppercase font-weight-bold ">Profile & Academics <button type="button" class="btn btn-light float-right">Edit</button></p></li>
+            <li class="list-group-item"><p class="h3">Profile & Academics <button type="button" class="btn btn-light float-right">Edit</button></p></li>
              <li class="list-group-item"><h6 class="mb-1">Undergrad:</h6><small>Computer Science from Medicaps University</small>
               
         <div class="d-flex bd-highlight">
@@ -146,7 +146,7 @@
     </div> 
     <div class="col">
         <ul class="list-group list-group-flush">
-             <li class="list-group-item"><p class="text-uppercase font-weight-bold ">Universities Applied <button type="button" class="btn btn-light float-right">Add/Edit</button></p></li>
+             <li class="list-group-item"><p class="h3 ">Universities Applied <button type="button" class="btn btn-light float-right">Add/Edit</button></p></li>
              <li class="list-group-item">
                  <div class="row">
                  <div class="col-10"><h6 class="mb-1">Missouri University Of Science And Technology</h6></div>
