changed the path of css and jss files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="D:\practice\css\bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	<script src="D:\practice\Js\jquery-3.3.1.slim.min.js" ></script>
-  <script src="D:\practice\Js\popper.min.js" ></script>
-  <script src="D:\practice\Js\bootstrap.min.js" ></script>
+	<script src="Js/jquery-3.3.1.slim.min.js" ></script>
+  <script src="Js/popper.min.js" ></script>
+  <script src="Js/bootstrap.min.js" ></script>
 </head>
 <body >
 <nav class="navbar navbar-expand-lg navbar-light sticky-top" style="background-color:#FF9800;border-color:#FF9800">
