--- a/index.html
+++ b/index.html
@@ -428,93 +428,95 @@
 	</div>	
 </div>
 </div>
-<div class="container-fluid bg-secondary">
-	<div class="row bg-secondary">
-		
-	</div>
-	<div class="row m-3 justify-content-center">
-		<div class="col">
-			<div class="float-right">
-				Looking for help?
+<footer>
+	<div class="container-fluid bg-secondary">
+		<div class="row bg-secondary">
+			
+		</div>
+		<div class="row m-3 justify-content-center">
+			<div class="col">
+				<div class="float-right">
+					Looking for help?
+				</div>	
+			</div>
+			<div class="col pl-0">
+				<button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
 			</div>	
 		</div>
-		<div class="col pl-0">
-			<button type="button" class="btn btn-sm rounded btn-primary">CONTACT US</button>
-		</div>	
-	</div>
-	<div class="container">
-		<div class="row m-3">
-			<div class="col-3">
-				<div class="card h-100 bg-secondary border-secondary">
-				  <div class="card-body text-center">
-				    <strong>UNIVERSITY INFORMATION</strong>
-				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-				    <ul class="card-text list-unstyled">
-				    	<li>University Reviews</li>
-						<li>Profile evaluator</li>
-						<li>Compare universities</li>
-						<li>Application Deadlines</li>
-						<li>Course Descriptions</li>
-					</ul>
-				  </div>
+		<div class="container">
+			<div class="row m-3">
+				<div class="col-3">
+					<div class="card h-100 bg-secondary border-secondary">
+					  <div class="card-body text-center">
+					    <strong>UNIVERSITY INFORMATION</strong>
+					    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+					    <ul class="card-text list-unstyled">
+					    	<li>University Reviews</li>
+							<li>Profile evaluator</li>
+							<li>Compare universities</li>
+							<li>Application Deadlines</li>
+							<li>Course Descriptions</li>
+						</ul>
+					  </div>
+					</div>
 				</div>
-			</div>
-			<div class="col-3">
-				<div class="card h-100 bg-secondary border-secondary">
-				  <div class="card-body text-center">
-				    <strong>EXPLORE YOCKET</strong>
-				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-				    <ul class="card-text list-unstyled">
-				    	<li>Similar profiles</li>
-						<li>Admits & rejects</li>
-						<li>Roommate finder</li>
-						<li>Discussions</li>
-						<li>Read Articles</li>
-					</ul>
-				  </div>
+				<div class="col-3">
+					<div class="card h-100 bg-secondary border-secondary">
+					  <div class="card-body text-center">
+					    <strong>EXPLORE YOCKET</strong>
+					    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+					    <ul class="card-text list-unstyled">
+					    	<li>Similar profiles</li>
+							<li>Admits & rejects</li>
+							<li>Roommate finder</li>
+							<li>Discussions</li>
+							<li>Read Articles</li>
+						</ul>
+					  </div>
+					</div>
 				</div>
-			</div>
-			<div class="col-3">
-				<div class="card h-100 bg-secondary border-secondary">
-				  <div class="card-body text-center">
-				    <strong>SERVICES</strong>
-				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-				    <ul class="card-text list-unstyled">
-				    	<li>Send transcripts</li>
-						<li>Education Loans</li>
-						<li>Forex Card</li>
-						<li>University fee payment</li>
-						<li>Health/Travel Insurance</li>
-					</ul>
-				  </div>
+				<div class="col-3">
+					<div class="card h-100 bg-secondary border-secondary">
+					  <div class="card-body text-center">
+					    <strong>SERVICES</strong>
+					    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+					    <ul class="card-text list-unstyled">
+					    	<li>Send transcripts</li>
+							<li>Education Loans</li>
+							<li>Forex Card</li>
+							<li>University fee payment</li>
+							<li>Health/Travel Insurance</li>
+						</ul>
+					  </div>
+					</div>
 				</div>
-			</div>
-			<div class="col-3">
-				<div class="card h-100 bg-secondary border-secondary">
-				  <div class="card-body text-center">
-				    <strong>MORE</strong>
-				    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
-				    <ul class="card-text list-unstyled">
-				    	<li>Contact us | Work with us</li>
-						<li>Facebook | Twitter</li>
-						<li>About Us</li>
-						<li>Campus Ambassador</li>
-						<li>Privacy | Terms</li>
-					</ul>
-				  </div>
+				<div class="col-3">
+					<div class="card h-100 bg-secondary border-secondary">
+					  <div class="card-body text-center">
+					    <strong>MORE</strong>
+					    <!--<h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>-->
+					    <ul class="card-text list-unstyled">
+					    	<li>Contact us | Work with us</li>
+							<li>Facebook | Twitter</li>
+							<li>About Us</li>
+							<li>Campus Ambassador</li>
+							<li>Privacy | Terms</li>
+						</ul>
+					  </div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
-	<div class="row justify-content-center">
-		<div class="col-auto">
-			<select class="form-control form-control-sm">
-			  <option>Select language</option>
-			</select>
-			<p>Powered by google <strong>Translate</strong></p>
+		<div class="row justify-content-center">
+			<div class="col-auto">
+				<select class="form-control form-control-sm">
+				  <option>Select language</option>
+				</select>
+				<small>Powered by Google <strong>Translate</strong></small></p>
 
+			</div>	
 		</div>	
-	</div>	
-</div>	
+	</div>
+</footer>		
 </body>
 </html>
