added university_deadlines (final)

--- a/university_reviews.html
+++ b/university_reviews.html
@@ -428,7 +428,7 @@
                         <select class="form-control form-control-sm">
                           <option>Select language</option>
                         </select>
-                        <small>Powered by Google <strong>Translate</strong></small></p>
+                        <small>Powered by Google <strong>Translate</strong></small>
                     </div>	
                 </div>	
         </footer>
